# RepeatNoMore

./: .env.example  .gitignore  404.html  CLAUDE.md  Dockerfile  Dockerfile.discord  LICENSE  Makefile  README.md  coverage.xml  docker-compose.services.yml  docker-compose.yml  docs.html  index.html  markdown-page.html  pyproject.toml  pytest.ini  requirements.txt  sitemap.xml  test_bot.sh  test_ollama_simple.py  test_ollama_tools.py  test_tool_based_qa.py
app/: config.py  main.py
app/agents/: code_review_agent.py  draft_agent.py  qa_agent_rag_backup.py  shared.py  supervisor_agent.py
app/api/: routes.py  schemas.py  workflow_routes.py
app/discord/: __init__.py  bot.py  embeds.py  run.py  utils.py
app/events/: __init__.py  dispatcher.py  setup.py  types.py
app/llm/: __init__.py  base.py  exceptions.py  factory.py  types.py
app/rag/: document_loader.py  embeddings.py  retriever.py  vector_store.py
app/services/: __init__.py  budget_service.py  git_service.py  language_service.py  notification_service.py  permission_service.py  qa_service.py  workflow_service.py
app/storage/: __init__.py  json_storage.py  models.py
app/tools/: __init__.py  document_tools.py
app/utils/: logging.py  metrics.py  security.py
assets/css/: styles.efa6392c.css
assets/js/: 0e384e19.7a4eade6.js  1df93b7f.cf78b42f.js  237.b5f499a0.js  285.b9195c1c.js  393be207.78333bf0.js  4b67df7a.1ba78cb2.js  5281b7a2.371a0051.js  5dd4cb9f.d4926b73.js  9a00dd10.d3bf72c6.js  a94703ab.ea41ee4f.js  d589d3a7.23084892.js  fcff9033.b6b0c828.js  main.091ffeb7.js  runtime~main.5fc56155.js
docs/: architecture.html  customization.html  design-decisions.html  discord-setup.html  getting-started.html
docs-site/: EDITOR_REVIEW.md  docusaurus.config.ts  package-lock.json  sidebars.ts
docs-site/docs/: architecture.md  customization.md  design-decisions.md  discord-setup.md  getting-started.md  intro.md
examples/: agent_examples.py
knowledge_base/drafts/: draft_updates.md
knowledge_base/qa/: accepted_qa_en.md  accepted_qa_hu.md
knowledge_base/suggestions/: suggested_features.md
scripts/: download_models.py  init_pgvector.sql  setup_local.sh  setup_uv.sh
tests/: conftest.py
tests/benchmark/: __init__.py  test_model_benchmark.py
(+62 files in other folders)
