[project]
name = "repeatnomore"
version = "1.0.0"
description = "AI-powered framework assistant with RAG and local LLMs"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Zsolt Kreisz" }
]

dependencies = [
    # Core Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    
    # LangChain (document loading and text splitting)
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    
    # Vector Database and Embeddings
    "psycopg2-binary>=2.9.9",
    "pgvector>=0.2.4",
    "sentence-transformers>=3.1.0",
    
    # LLM API Providers
    "openai>=1.0.0",
    "anthropic>=0.40.0",
    "ollama>=0.4.0",
    
    # Discord Integration
    "discord.py>=2.3.2",
    "audioop-lts>=0.2.2; python_version >= '3.13'",
    
    # Utilities
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.12",
    "httpx>=0.27.0",
    "tenacity>=8.5.0",
    "requests>=2.32.3",
    
    # Monitoring and Logging
    "prometheus-client>=0.21.0",
    "structlog>=24.4.0",
    
    # Document Processing
    "pypdf>=5.1.0",
    "markdown>=3.7",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.3.0",
    # "unstructured>=0.18.21",  # Disabled - incompatible with Python 3.12+
]

[project.optional-dependencies]
teams = [
    "botbuilder-core>=4.15.0",
    "botbuilder-schema>=4.15.0",
    "botbuilder-integration-aiohttp>=4.15.0",
    "aiohttp>=3.9.3",
]
azure = [
    "azure-identity>=1.15.0",
    "msal>=1.26.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
